Projeto Importado do Snack.Expo.Dev

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ServicosDrone",
-    "slug": "ServicosDrone",
+    "name": "apmd_gs_final",
+    "slug": "snack-7bca2b8b-d946-472c-982d-0f3b9acf103e",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
