--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "servicosdrone",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -9,13 +7,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~47.0.3",
-    "expo-status-bar": "~1.4.2",
-    "react": "18.1.0",
-    "react-native": "0.70.5",
-    "react-native-web": "~0.18.9",
-    "react-dom": "18.1.0",
-    "@expo/webpack-config": "^0.17.2"
+    "expo": "~46.0.17",
+    "expo-status-bar": "~1.4.0",
+    "react": "18.0.0",
+    "react-native": "0.69.6",
+    "react-native-paper": "4.9.2",
+    "@expo/vector-icons": "^13.0.0",
+    "expo-constants": "~13.2.4",
+    "@react-navigation/native": "*",
+    "@react-navigation/bottom-tabs": "*",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "@react-navigation/native-stack": "*",
+    "react-hook-form": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
